--- a/formulario_pilotos.html
+++ b/formulario_pilotos.html
@@ -70,7 +70,7 @@
     </header>
 
     <nav>
-        <a href="12357o.html">Página Principal</a>
+        <a href="index.html">Página Principal</a>
     </nav>
 
     <section>
